--- a/.github/workflows/nqp_pr_review.yml
+++ b/.github/workflows/nqp_pr_review.yml
@@ -32,7 +32,7 @@ jobs:
 
     - name: Add poetry to PATH
       if: steps.cache.outputs.cache-hit == 'true'
-      run: echo steps.cache.outputs.dir >> $GITHUB_PATH
+      run: echo ${{ steps.pip-cache.outputs.dir }} >> $GITHUB_PATH
 
     - name: Install dependencies
       if: steps.cache.outputs.cache-hit != 'true'
