--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectKey=Snayff_notquiteparadise
 sonar.organization=snayff
 
 # Path is relative to the .sonarcloud.properties file. Replace "\" by "/" on Windows.
-#sonar.projectBaseDir=.
+sonar.projectBaseDir=.
 sonar.sources=scripts/**,data/**
 sonar.tests=tests/**
 sonar.python.coverage.reportPaths=tests/_coverage/coverage.xml
