--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,9 +5,9 @@ sonar.organization=snayff
 
 # Path is relative to the .sonarcloud.properties file. Replace "\" by "/" on Windows.
 sonar.projectBaseDir=.
-sonar.sources=scripts/**,data/**
-sonar.tests=tests/**
-sonar.python.coverage.reportPaths=tests/_coverage/coverage.xml
+sonar.sources=scripts\**,data\**
+sonar.tests=tests\**
+sonar.python.coverage.reportPaths=tests\_coverage\coverage.xml
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
