--- a/.github/workflows/nqp_sonarcloud.yml
+++ b/.github/workflows/nqp_sonarcloud.yml
@@ -11,10 +11,18 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # Disabling shallow clone is recommended for improving relevancy of reporting
 
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
+        with:
+          args: >
+            -Dsonar.organization=snayff
+            -Dsonar.projectKey=Snayff_notquiteparadise
+            -Dsonar.python.coverage.reportPaths=coverage.xml
+            -Dsonar.sources=scripts/
+            -Dsonar.tests=tests/
+            -Dsonar.verbose=true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
