--- a/.github/workflows/nqp_sonarcloud.yml
+++ b/.github/workflows/nqp_sonarcloud.yml
@@ -1,9 +1,10 @@
 name: NQP - Analyse with Sonarcloud
 
 on:
-  completion:
-    success:
-      - NQP - PR Review
+  workflow_run:
+    workflows: [ "NQP - PR Review" ]
+    types:
+      - completed
 
 jobs:
   sonarcloud:
