--- a/.github/workflows/nqp_pr_review.yml
+++ b/.github/workflows/nqp_pr_review.yml
@@ -61,7 +61,7 @@ jobs:
     - name: Pytest with Coverage
       if: always()
       run: |
-        poetry run python -m pytest --cov=nqp --cov-report=xml
+        poetry run python -m pytest --cov=tests/ --cov-report=xml
 
     - name: Upload Coverage to Code Cov
       uses: codecov/codecov-action@v1
