--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,3 +1,5 @@
+# For use when automatic analysis is on. Automatic analysis must be off for coverage.
+
 sonar.projectKey=Snayff_notquiteparadise
 sonar.organization=snayff
 
@@ -6,7 +8,7 @@ sonar.organization=snayff
 #sonar.projectVersion=1.0
 
 # Path is relative to the .sonarcloud.properties file. Replace "\" by "/" on Windows.
-sonar.inclusions=**/scripts/**
+sonar.inclusions=**/scripts/**,**/data/**
 sonar.exclusions=**/docs/**,**/logs/**,.mypy_cache/**,.github/**,assets/**
 sonar.test.inclusions=**/tests/**
 
@@ -15,3 +17,4 @@ sonar.test.inclusions=**/tests/**
 
 # other
 sonar.showProfiling=true
+sonar.verbose=true
