set base coverage

--- a/.github/workflows/nqp_checks.yml
+++ b/.github/workflows/nqp_checks.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Pytest with Coverage
       if: always()
       run: |
-        poetry run python -m pytest --cov=nqp
+        poetry run python -m pytest --cov=scripts/ tests/
 
     - name: Check Docs Build
       run: |
