behaviour allow for attacking

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -3,7 +3,7 @@
 sonar.projectKey=Snayff_notquiteparadise
 sonar.organization=snayff
 
-# This is the name and version displayed in the SonarCloud UI.
+# This is the f_name and version displayed in the SonarCloud UI.
 #sonar.projectName=notquiteparadise
 #sonar.projectVersion=1.0
 
