--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ sphinx-autodoc-typehints = "^1.11.0"
 sphinx-git = "^11.0.0"
 sphinx-rtd-theme = "^0.5.0"
 codecov = "^2.1.10"
+pytest-benchmark = {extras = ["histogram"], version = "^3.2.3"}
 
 [tool.black]
 target-version = ['py37']
