--- a/mypy.ini
+++ b/mypy.ini
@@ -4,10 +4,11 @@ files= scripts
 warn_return_any = False
 warn_unused_configs = True
 warn_redundant_casts = True
-warn_unused_ignores  = True
+warn_unused_ignores  = False
 warn_unreachable  = False
 show_error_context  = False
 pretty  = False
+
 
 [mypy-pygame.*]
 ignore_missing_imports = True
