update to latest packages

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,8 +5,8 @@ addopts =
     --benchmark-min-rounds=5
     --benchmark-compare
     --benchmark-histogram="tests/.metrics/histogram"
-    --benchmark-max-time=1.0
     --benchmark-storage="file://tests/.metrics/benchmarks"
+    --benchmark-disable-gc
 testpaths = tests
 python_files = test_*.py
 log_level = CRITICAL
