--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,19 +7,19 @@ authors = ["Snayff"]
 [tool.poetry.dependencies]
 python = "^3.8"
 snecs = "^1.2.1"
-pygame = "2.0.0dev10"
+pygame = "^2.0.0"
 pygame-gui = "^0.5.6"
 pytweening = "^1.0.3"
-tcod = "^11.13.1"
+tcod = "^11.18.0"
 scipy = "^1.4.1"
 
 [tool.poetry.dev-dependencies]
 sphinx = "^3.0.4"
-mypy = "^0.780"
-vulture = "^1.5"
-isort = "^4.3.21"
-black = "^19.10b0"
-pytest = "^5.4.3"
+mypy = "^0.790"
+vulture = "^2.1"
+isort = "^5.6.4"
+black = "^20.8b1"
+pytest = "^6.1.2"
 pytest-cov = "^2.10.1"
 sphinx_autodoc_typehints = "^1.11.0"
 sphinx-autodoc-annotation = "^1.0-1"
