isort and blacken

--- a/.github/workflows/nqp_pr_review.yml
+++ b/.github/workflows/nqp_pr_review.yml
@@ -57,17 +57,17 @@ jobs:
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
 
-    - name: Lint with Black
-      if: always()
-      run: |
-        poetry run python -m black scripts/
-
     - name: Format with isort
       if: always()
       run: |
         cd scripts
-        poetry run python -m isort -y
+        poetry run python -m isort .
         cd ..
+
+    - name: Lint with Black
+        if: always()
+        run: |
+          poetry run python -m black scripts/
 
     - name: Update Git
       if: github.repository == 'Snayff/notquiteparadise'
