feature/terrain_and_reactions (#140)
* added terrain creation

* revised file structure, added interaction events and handling

* created trigger system for reactions

* abstracted effect creation for when effect type is unknown

* remove triggerskilleffect

* moved affliction trigger out of effect

* added data classes for effects, added interactions for effects

* added alter terrain effect

* remove push action, reorder pr review action

* added alter terrain effect to create effect

* added lifespan duration reduction, refactored other duration reductions

* remove mocks

* added damage_effect test

* added move_actor_effect test

* added affect_stat_effect test

* added apply_affliction effect

* added affect_cooldown_effect

* added alter_terrain_effect_test

* update to latest packages

* isort and blacken

* ci lint and test

Co-authored-by: nqp <snayff@users.noreply.github.com>

--- a/.github/workflows/nqp_pr_review.yml
+++ b/.github/workflows/nqp_pr_review.yml
@@ -41,18 +41,6 @@ jobs:
         poetry config virtualenvs.create false
         poetry install --no-root
 
-    - name: Lint with Black
-      if: always()
-      run: |
-        poetry run python -m black scripts/
-
-    - name: Format with isort
-      if: always()
-      run: |
-        cd scripts
-        poetry run python -m isort -y
-        cd ..
-
     - name: mypy Type Check
       if: always()
       run: |
@@ -68,6 +56,18 @@ jobs:
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
+
+    - name: Format with isort
+      if: always()
+      run: |
+        cd scripts
+        poetry run python -m isort .
+        cd ..
+
+    - name: Lint with Black
+      if: always()
+      run: |
+        poetry run python -m black scripts/
 
     - name: Update Git
       if: github.repository == 'Snayff/notquiteparadise'
