--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,19 +7,20 @@ authors = ["Snayff"]
 [tool.poetry.dependencies]
 python = "^3.8"
 snecs = "^1.2.1"
-pygame = "2.0.0dev10"
+pygame = "2.0.0.dev10"
 pygame-gui = "^0.5.6"
 pytweening = "^1.0.3"
-tcod = "^11.13.1"
+tcod = "^11.18.0"
 scipy = "^1.4.1"
 
+
 [tool.poetry.dev-dependencies]
-sphinx = "^3.0.4"
-mypy = "^0.780"
-vulture = "^1.5"
-isort = "^4.3.21"
-black = "^19.10b0"
-pytest = "^5.4.3"
+sphinx = "^3.3.1"
+mypy = "^0.790"
+vulture = "^2.1"
+isort = "^5.6.4"
+black = "^20.8b1"
+pytest = "^6.1.2"
 pytest-cov = "^2.10.1"
 sphinx_autodoc_typehints = "^1.11.0"
 sphinx-autodoc-annotation = "^1.0-1"
@@ -30,18 +31,17 @@ codecov = "^2.1.10"
 pytest-benchmark = {extras = ["histogram"], version = "^3.2.3"}
 
 [tool.black]
-target-version = ['py37']
+target-version = ['py38']
 line-length = 120
 
 [tool.isort]
-multi_line_output = 3
+force_alphabetical_sort_within_sections = true
 include_trailing_comma = true
+sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
+multi_line_output = 3
 force_grid_wrap = 0
 use_parentheses = true
 line_length = 120
-known_third_party = [""]
-known_future_library = ["annotations"]
-force_to_top = ["typing, __future__"]
 indent = 4
 lines_between_types = 0
 
