--- a/.github/workflows/nqp_pr_review.yml
+++ b/.github/workflows/nqp_pr_review.yml
@@ -6,7 +6,8 @@ on:
 
 jobs:
   job1:
-    if: github.event.pusher.name == "Snayff"
+    # check if from main repo or fork
+    if: ${{ github.event.pull_request.head.repo.full_name == github.event.pull_request.base.repo.full_name }}
     name: PR Review - Snayff
     runs-on: windows-latest
 
