--- a/.github/workflows/nqp_pr_review_other.yml
+++ b/.github/workflows/nqp_pr_review_other.yml
@@ -6,8 +6,9 @@ on:
 
 jobs:
   job1:
-    if: github.event.pusher.name != "Snayff"
-    name: PR Review - Snayff
+    # check if from main repo or fork
+    if: ${{ github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name }}
+    name: PR Review - Other
     runs-on: windows-latest
 
     steps:
