--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,8 @@ sphinx-git = "^11.0.0"
 sphinx-rtd-theme = "^0.5.0"
 codecov = "^2.1.10"
 pytest-benchmark = {extras = ["histogram"], version = "^3.2.3"}
+sphinx-material = {git = "https://github.com/bashtage/sphinx-material.git"}
+sphinx_materialdesign_theme = "^0.1.11"
 
 [tool.black]
 target-version = ['py38']
