--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,9 @@ sphinx_autodoc_typehints = "^1.11.0"
 sphinx-autodoc-annotation = "^1.0-1"
 sphinx-autodoc-typehints = "^1.11.0"
 sphinx-git = "^11.0.0"
-sphinx-rtd-theme = "^0.5.0"
 codecov = "^2.1.10"
 pytest-benchmark = {extras = ["histogram"], version = "^3.2.3"}
+sphinx-material = {git = "https://github.com/bashtage/sphinx-material.git"}
 
 [tool.black]
 target-version = ['py38']
