--- a/.github/workflows/nqp_docs.yml
+++ b/.github/workflows/nqp_docs.yml
@@ -32,6 +32,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install libsdl2-dev
           sudo apt-get install python-sphinx
+          python -m pip install --upgrade pip
           python -m pip install --upgrade poetry
           poetry config virtualenvs.create false
           poetry install --no-root
