--- a/.github/workflows/nqp_pr_review_other.yml
+++ b/.github/workflows/nqp_pr_review_other.yml
@@ -34,6 +34,7 @@ jobs:
 
     - name: Install dependencies
       run: |
+        python -m pip install --upgrade pip
         python -m pip install --upgrade poetry
         poetry config virtualenvs.create false
         poetry install --no-root
