--- a/.github/workflows/nqp_docs.yml
+++ b/.github/workflows/nqp_docs.yml
@@ -6,10 +6,11 @@ on:
 
 jobs:
   docs:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
+
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.3.4
 
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
@@ -29,9 +30,6 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install libsdl2-dev
-          sudo apt-get install python-sphinx
           python -m pip install --upgrade pip
           python -m pip install --upgrade poetry
           poetry config virtualenvs.create false
@@ -48,9 +46,3 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: docs/_build
-
-      - name: Upload Coverage to Code Cov
-        uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.xml
